Added 1.18 Download to all CubeChaos Pages

--- a/static/html/addons_html/3d_crystals.html
+++ b/static/html/addons_html/3d_crystals.html
@@ -59,11 +59,13 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-crystals-addon/download/3550761" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-crystals-addon/download/3381268" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
           </div>
-          <!-- <div class="more_versions">
-            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
-          </div>-->
+        </div>
+        <a class="java_changelog_button_a" href="http://changelogs.cubechaos.net/">
+          <img class="java_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png.webp">
+        </a>
         </div>
     </div>
     <div class="footer">
