--- a/static/html/java_edition.html
+++ b/static/html/java_edition.html
@@ -77,12 +77,13 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3525255" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3550723" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3550720" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360174" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325875" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325889" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325904" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325907" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325907" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325933" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.11_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325941" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.10_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325951" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.9_green.png.webp"></a>
