--- a/static/html/addons_html/3d_blocks.html
+++ b/static/html/addons_html/3d_blocks.html
@@ -59,16 +59,21 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375266" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3550744" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3550733" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375260" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3375210" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3371461" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png.webp"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3367818" class="version"><img src="/static/resources/buttons/download_buttons/version_1.13_green.png.webp"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3367796" class="version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-3d-blocks-addon/download/3367796" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.12_green.png.webp"></a>
           </div>
-          <!-- <div class="more_versions">
-            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
-          </div>-->
+          <div class="more_versions">
+            <img id="more_versions_button" src="/static/resources/buttons/download_buttons/more_button.png.webp">
+          </div>
+        </div>
+        <a class="java_changelog_button_a" href="http://changelogs.cubechaos.net/">
+          <img class="java_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png.webp">
+        </a>
         </div>
     </div>
     <div class="footer">
