--- a/static/html/x-mas_edition.html
+++ b/static/html/x-mas_edition.html
@@ -59,7 +59,8 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550890" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550887" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png"></a>
           </div>
           <!-- <div class="more_versions">
             <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png">
