--- a/static/html/x-mas_edition.html
+++ b/static/html/x-mas_edition.html
@@ -13,8 +13,8 @@
       <div id="header_content">
         <div id="header_logo">
           <a id="header_logo_a" href="/static/html/index.html">
-            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png.webp">
           </a>
         </div>
         <div id="header_space_between">
@@ -22,18 +22,18 @@
         </div>
         <div id="header_icons">
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
-            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png.webp">
           </a>
           <a href="https://github.com/Mr3DAlien/Alien-Webserver">
-            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png.webp">
           </a>
           <a href="http://mr3dalien.net/">
-            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png.webp">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png.webp">
           </a>
         </div>
       </div>
@@ -59,11 +59,11 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550890" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png"></a>
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550887" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550890" class="version"><img src="/static/resources/buttons/download_buttons/version_1.18_green.png.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos-x-mas-edition/download/3550887" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png.webp"></a>
           </div>
           <!-- <div class="more_versions">
-            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png">
+            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png.webp">
           </div>-->
         </div>
     </div>
@@ -75,8 +75,8 @@
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
-          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png.webp">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png.webp">
         </div>
         <div class="footer_about_right">
           <div class="footer_legal">
